# beammp_rust_server

./: BEAMMP_PROTOCOL_DOCS.md  Cargo.toml  config.toml  west_coast_usa_cp0.json  west_coast_usa_cp1.json  west_coast_usa_cp2.json  west_coast_usa_finish.json  west_coast_usa_path.json  west_coast_usa_pit.json  west_coast_usa_pit_exit.json  west_coast_usa_spawns_even.json  west_coast_usa_spawns_odd.json  west_coast_usa_spawns_pit.json  west_coast_usa_track.json
src/: config.rs  main.rs  util.rs
src/server/: backend.rs  car.rs  client.rs  mod.rs  overlay.rs  packet.rs  physics.rs  spawns.rs  track_limits.rs  track_path.rs
src/ui/: communicator.rs  input.rs  mod.rs
