[package]
name = "beammp_rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
argh = "0.1.9"
anyhow = "1.0.66"

async-trait = "0.1.58"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"] }

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

toml = "0.5"
flate2 = "1.0"

nalgebra = "0.31.4"
rapier3d = "0.16.1"

# UI
crossterm = "0.25"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
tui-logger = "0.8"
better-panic = "0.3"
